<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="283dp"
    android:background="@color/md_indigo_200"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/logonew"
        android:contentDescription="@string/policelogodec" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/policeCommand"
        android:textColor="@color/md_black_1000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/powerBy"
        android:textSize="12sp"
        android:textStyle="italic" />

</LinearLayout>
