<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_indigo_200"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme"
                app:title="@string/app_name"
                app:titleTextColor="@color/md_white_1000" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@color/md_light_green_300"
            app:cardCornerRadius="2dp"
            app:cardElevation="40dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:paddingBottom="3dp"
                    android:text="@string/benue_police"
                    android:textColor="#33691E"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageBanner"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="38dp"

                    android:layout_marginRight="10dp"
                    android:background="@drawable/banner"

                    android:contentDescription="@string/benue_police" />


            </FrameLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@color/md_green_300"
            app:cardCornerRadius="3dp"
            app:cardElevation="40dp">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/zoneReportLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/text_title"
                    android:textColor="#33691E"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/buttonA"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"

                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="45dp"

                    android:background="@color/md_cyan_100"
                    android:drawableStart="@drawable/tiv_logo1"
                    android:drawableEnd="@drawable/tiv_logo1"
                    android:text="@string/buttonA"
                    android:textColor="#33691E"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonB"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"

                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"

                    android:background="@color/md_cyan_100"
                    android:drawableStart="@drawable/tiv_logo1"
                    android:drawableEnd="@drawable/tiv_logo1"
                    android:elevation="@android:dimen/notification_large_icon_height"
                    android:text="@string/buttonB"
                    android:textColor="#33691E"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/md_cyan_100"

                    android:drawableStart="@drawable/idoma_logo1"
                    android:drawableEnd="@drawable/idoma_logo1"
                    android:elevation="@android:dimen/notification_large_icon_width"
                    android:paddingTop="3dp"
                    android:text="@string/buttonC"
                    android:textColor="#33691E"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:gravity="center"

                    android:text="@string/labelReason"
                    android:textSize="14sp"
                    android:textStyle="italic|bold" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_nav_layout"
        app:itemTextColor="@color/md_red_A700"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>