<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_light_green_300"

    tools:context=".ReportA">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/md_indigo_200">



        <TextView
            android:id="@+id/msgWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/report_a"
            android:textColor="@color/md_black_1000"
            android:background="@color/md_blue_600"
            android:textSize="16sp" />



        <Spinner
            android:id="@+id/spinnerA"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@color/md_blue_600"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/zoneAaddrField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:hint="@string/addrHint"
                android:background="@drawable/custom_text_box"
                android:padding="2dp"
                android:textColor="@color/md_black_1000"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/zoneAreportField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:textColor="@color/md_black_1000"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:hint="@string/eventFieldHint"
                android:padding="50dp"
                android:background="@drawable/custom_text_box"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/zoneAbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/md_blue_600"
            android:text="@string/sendButton"
            android:textColor="#04071D"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>



</ScrollView>